# AutoFigure

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  start-space.sh  start.sh  stop.sh
autofigure/: README.md  __init__.py  agent.py  config.py  enhancer.py  extractor.py  generator.py
autofigure/utils/: __init__.py  file_utils.py  llm_client.py
backend/: .env.example  app.py  autofigure_routes.py  requirements.txt
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/actions/: pdf-actions.ts
frontend/app/api/pdf-to-markdown/: route.ts
frontend/app/autofigure/: autofigure-theme.css  layout.tsx  page.tsx
frontend/app/autofigure/canvas/: page.tsx
frontend/components/autofigure/: AutoFigureConfigPanel.tsx  BeautificationDialog.tsx  BottomBar.tsx  EnhancedImageGallery.tsx  GenerationOverlay.tsx  ImageGenSettings.tsx  IterationControls.tsx  IterationControlsFloating.tsx  SettingsModal.tsx  index.ts
frontend/contexts/: autofigure-context.tsx
